Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-125084
Some 2D graph types are missing overview documentation
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
6.8.0 FF
Affects Version/s:
6.8
Component/s:
Graphs: 2D
Labels:
None
Commits:
2541d4643 (dev)
Description
Area and donut are missing from overview docs.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Tomi Korpipää
Reporter:
Tomi Korpipää
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
06 May '24 06:24
Updated:
08 May '24 07:31
Resolved:
08 May '24 07:31
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Add missing 2D overview docs
Gerrit Review: