Add missing 2D overview docs

Fixes: QTBUG-125084
Change-Id: I1181fd2a173ee02a6b0102639c7808ce6b437853
Reviewed-by: <owais.akhtar@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>